FINERACT-1981: EMI calculator rework